<resources>
    <string name="app_name">Dormie</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="sign_in">SIGN-IN TO DORMIE</string>
    <string name="skip">SKIP FOR NOW</string>
    <string name="new_account">No Account? Register here.</string>

    <!-- registration -->
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered? Sign in here.</string>


    <!-- menu -->
    <string name="first_option_menu">Settings</string>
    <string name="second_option_menu">About us</string>
    <string name="third_option_menu">Exit</string>


    <!-- navbar menu -->
    <string name="nav_dashboard">Home</string>
    <string name="nav_create_record">Create a sleep record</string>
    <string name="nav_motion_sensor">Test motion sensor</string>
    <string name="nav_stat">Sleep Data</string>
    <string name="nav_music">Sleeping Music Library</string>
    <string name="nav_sleep">Sleep now</string>
    <string name="nav_change_acct">Change Account</string>
    <string name="nav_log_out">Reset Account</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Sleep Adviser</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Dormie -->
    <string name="dormie_card">Dormie\'s daily advise</string>
    <string name="bottomsheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string-array name="dropdown">
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subtitle">Ms Els Van Der Helm\'s recommendation</string>
    <string name="subtitle_2">According to buzzfeed, these are some tips to help you fall asleep easily:</string>
    <string name="subtitle_3">Ms Els Van Der Helm on sleep deprived teenagers</string>
    <string name="subtitle_4">6 scientific tricks according to tech insider</string>
    <string name="subtitle_5">According to Ms. Els Van Der Helm, these are 3 rules on naps.</string>
    <string name="subtitle_6">What is a sleep debt?</string>
    <string name="list_1">
        A sleep expert shares some tips on good sleeping habits and exercises.
    </string>
    <string name="list_2">
        1. Read a book before going to bed or listen to an audiobook\n\n
        2. Keep your alarm clock out of your line of sight\n\n
        3. If you feel anxious, you can write down all your thoughts at night.\n\n
        4. Exercise in the evening.\n\n
        5. Fall asleep to the sounds of the nature.\n\n
        6. Make your room a screen-free zone.\n\n
        7. Keep your alarm clock out of your line of sight\n\n
        9. Focus on your breathing.\n\n
        10. Keep your bedroom with a nice scent\n\n
    </string>
    <string name="list_3">
        A sleep expert said, a sleep deprived teenager is not equipped to deal with adolescence.
    </string>
    <string name="list_4">
        1. If you can\'t sleep, go out of bed\n\n
        2. Turn off your phone\n\n
        3. Try meditation\n\n
        4. Try to stay awake - a counter intuitive technique\n\n
        5. Stick to a routine\n\n
        6. Do something mindless
    </string>
    <string name="list_5">
        1. Do not nap if you have trouble sleeping \n\n
        2. Pick a time.\n\n
        3. No recover nap on Sunday
    </string>
    <string name="list_6">
        According to a sleep researcher/expert, a sleep debt is the difference between how much sleep you need vs how much sleep you are getting
    </string>


</resources>
